--- a/Dockerfile.binary
+++ b/Dockerfile.binary
@@ -1,14 +1,13 @@
 FROM golang:1.8
 
-COPY . /project/src/github.com/JinHyukParkk/LoggingDriverTest
-WORKDIR /project/src/github.com/JinHyukParkk/LoggingDriverTest
+COPY . /home/docker/project/src/github.com/JinHyukParkk/LoggingDriverTest
+WORKDIR /home/docker/project/src/github.com/JinHyukParkk/LoggingDriverTest
 
 ENV CGO_ENABLED=0
-ENV GOPATH $HOME/project
+ENV GOPATH /home/docker/project
 ENV GOROOT /usr/local/go
 ENV PATH $GOROOT/bin:$GOPATH/bin:$PATH
 
-RUN echo $HOME
 RUN go install
 
 CMD ["/go/bin/test-docker-logging-plugin"]
