--- a/config.json
+++ b/config.json
@@ -1,43 +1,17 @@
 {
-    "description" : "A Docker logging plugin for the Discovery Environment job execution platform.",
-    "documentation" : "https://github.com/JinHyukParkk/LoggingDriverTest",
-    "entrypoint" : ["/LoggingDriverTest"],
-    "interface" : {
-        "types" : ["docker.logdriver/1.0"],
-        "socket" : "delogplugin.sock"
-    },
-    "env" : [
-        {
-            "name" : "uid",
-            "description" : "The uid of the user that should own the log files. Defaults to a uid of 0.",
-            "value" : "0",
-            "settable" : [
-                "value"
-            ]
-        },
-        {
-            "name" : "gid",
-            "description" : "The gid of the group that should own the log files. Defaults to a gid of 0.",
-            "value" : "0",
-            "settable" : [
-                "value"
-            ]
-        }
-
-    ],
-    "mounts" : [
-      {
-        "name" : "de-log-directory",
-        "description" : "The host directory that logs will be written to.",
-        "source" : "/var/log/LoggingDriverTest/",
-        "destination" : "/var/log/LoggingDriverTest/",
-        "type" : "none",
-        "options" : [
-          "rbind"
-        ],
-        "settable" : [
-          "source"
-        ]
-      }
-    ]
+	"description": "jsonfilelog as plugin",
+	"documentation": "-",
+	"entrypoint": ["/usr/bin/dockerloggingdriver"],
+	"interface": {
+		"types": ["docker.logdriver/1.0"],
+		"socket": "jsonfile.sock"
+	},
+	"env": [
+		{
+			"name": "LOG_LEVEL",
+			"description": "Set log level to output for plugin logs",
+			"value": "info",
+			"settable": ["value"]
+		}
+	]
 }
